
TYPES OF CHANGES:
- "### Added" for new features.
- "### Changed" for changes in existing functionality.
- "### Deprecated" for soon-to-be removed features.
- "### Removed" for now removed features.
- "### Fixed" for any bug fixes.
- "### Security" in case of vulnerabilities.

## [Unreleased]
- Possibly provide reason for closing the file?
- Add service date calculator
- Add reverse service date calculator
- Add MOD breakdown commenting tool
- Add COE appeal period date calculator
- Add ability to copy text to clipboard
- Add employer stay date comment and copy to clipboard
- Improve menu layout...somehow
- Add intro/loading screen
- Change program icon


## [2.0.0] - TBD

### Added
- Users can now return to the main menu at any time in the program by typing the number 0.
- Added color to text to point out key words.

### Changed
- Made significant changes to the code in order for the new features to work.
- Returning to the main menu is now automatic; pressing Enter key is no longer required.
- Text cursor is now hidden when messages are diplayed.
- Converted wall of text at the beginning into  more questions to the "Can I close this file?" process.


## [1.0] - 2020-07-24

### Added
- Additional verification of dates entered for bankruptcies. For example, the program verifies that you enter a bankruptcy disposition date that is after the bankruptcy filing date.
- Calculating the levy lien period expiration now asks if it's for a writ of attachment, which increases the levy lien period to 3 years in its calculation.

### Changed
- Some of the text throughout the program was edited for improved clarity. For example, the main menu choices now have "BANKRUPTCY" added to it so the user knows what that function is normally used for.


## [0.3.0] - 2020-07-23

### Added
- The application info will display every time you return to the main menu.